--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
       - media_value:/var/html/media/
     depends_on:
       - web
-
+#volumes
 volumes:
   static_value:
   media_value:
